Added script to travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: java
 
 jdk:
-  - openjdk8
+  - openjdk13
+
+before_script:
+    - chmod a+x gradlew
+
+script: ./gradlew build
 
 notifications:
     email: false
