--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,21 @@
 language: java
 
-jdk:
-  - openjdk8
+matrix:
+  include:
+    - os: linux
+      sudo: required
+      jdk: oraclejdk8
+    - os: linux
+      sudo: required
+      jdk: openjdk11
 
-before_script:
-    - chmod a+x gradlew
+script: ./gradlew check --info --stacktrace --console=plain --max-workers=1 --no-daemon --build-cache -Dkotlin.colors.enabled=false
 
-sccript: ./gradlew build
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
-notifications:
-    email: false
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
