--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,8 @@
-dist: trusty
 language: java
-
-matrix:
-  include:
-    - os: linux
-      sudo: required
-      jdk: oraclejdk8
-    - os: linux
-      sudo: required
-      jdk: openjdk11
-
-script: ./gradlew check --info --stacktrace --console=plain --max-workers=1 --no-daemon --build-cache -Dkotlin.colors.enabled=false
-
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
+jdk:
+  - oraclejdk8
+before_install:
+  - chmod +x gradlew
+  - chmod +x gradle/wrapper/gradle-wrapper.jar
+script:
+  - ./gradlew test build
