--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: java
 jdk:
   - openjdk13
-
 before_install:
   - chmod +x gradlew
   - chmod +x gradle/wrapper/gradle-wrapper.jar
 script:
   - ./gradlew test build
+notifications:
+  email: false
+branches:
+  only:
+    - master
+    - dev
